<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_accueil"
            android:title="@string/nav_accueil" />
        <item
            android:id="@+id/nav_journal"
            android:icon="@drawable/ic_journal"
            android:title="@string/nav_journal" />
        <item
            android:id="@+id/nav_statistique"
            android:icon="@drawable/ic_stat"
            android:title="@string/nav_statistiques" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Autres">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>
