<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/Dialogs">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:alpha="0.5"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/signUp"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/userName"

            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/user"
            android:gravity="center_vertical"
            android:hint="@string/fui_username_hint"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/userEmailId"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/email"
            android:gravity="center_vertical"
            android:hint="@string/fui_email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/password"
            android:gravity="center_vertical"
            android:hint="@string/fui_password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/confirm_password"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/confirm_password"
            android:gravity="center_vertical"
            android:hint="@string/fui_password_confirm_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/terms_conditions"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="7dp"
            android:text="@string/fui_create_account_preamble_tos_only"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:text="@string/fui_title_register_email"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:textSize="12sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/already_user"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/fui_already_user"
            android:textColor="@color/white_greyish"
            android:textSize="15sp" />

    </LinearLayout>
</RelativeLayout>